--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,174 @@
 :root {
-    --main-color: #0078F6;
-    --background: #FAFAFA;
-    --text-grey: #888888;
+  --main-color: #0078f6;
+  --background: #fafafa;
+  --text-grey: #888888;
 }
-*{
-    font-family: "Inter";
-    color: white;
+* {
+  font-family: "Inter";
+  color: white;
 }
-span{
-    color: white;
-    font-size: 20px;
+span {
+  color: white;
+  font-size: 20px;
 }
-body{
-    margin: 0;
-    background-color: var(--background);
+body {
+  margin: 0;
+  background-color: var(--background);
 }
-.slider-container{
+.slider-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+}
+.slider {
+  display: flex;
+}
+.Item {
+  margin-left: 30px;
+  border-radius: 9px;
+  height: 360px;
+  width: 244px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 20px;
+  transition: all 0.2s ease;
+}
+.Item:hover {
+  transform: scale(1.1);
+}
+.Item h2 {
+  color: white;
+  font-size: 16px;
+}
+.item-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.item-header p {
+  color: white;
+  font-size: 12px;
+}
+.liveDot {
+  background-color: var(--main-color);
+  border-radius: 50%;
+  height: 6px;
+  width: 6px;
+}
+.category {
+  background-color: var(--main-color);
+  border-radius: 20px;
+  padding: 5px 10px 5px 10px;
+  text-align: center;
+  width: fit-content;
+  font-size: 9px;
+  text-transform: uppercase;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.hero {
+  background: linear-gradient(rgb(0, 0, 0, 0.6) -20%, #000000 100%),
+    url(asset/hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 30%;
+  height: 1000px;
+}
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+}
+.header {
+  padding: 24px 0 19px 0;
+  margin: 0 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+#bar-icon {
+  color: white;
+  font-size: 30px;
+}
+.logo {
+  height: 18px;
+  max-width: 100%;
+}
+.search-text {
+  opacity: 50%;
+  font-size: 10px;
+}
+#search {
+  opacity: 50%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+}
+.left-nav {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+#search-input {
+  background-color: transparent;
+  border: transparent;
+  outline: none;
+}
+.right-nav {
+  display: flex;
+  align-items: center;
+}
+.right-nav p {
+  font-size: 13px;
+  color: #888888;
+}
+.live {
+  display: flex;
+  background-color: rgb(255, 255, 255, 0.6);
+  border-radius: 30px;
+  padding: 10px;
+  color: white;
+  align-items: center;
+}
+.mid-nav {
+  display: flex;
+  justify-content: space-between;
+}
+i {
+  font-size: 40px;
+}
+.herobottom {
+  position: relative;
+  background-color: #000000;
+  height: 200px;
+}
+.scroll-background {
+  background-color: #000000;
+  height: 300px;
+  position: relative;
+}
+.editors-choice{
     display: flex;
+    justify-content: space-around;
+    font-size: 24px;
+    font-weight: bold;
+    align-items: center;
+}
+.pre-and-next{
+    background-color: rgba(192, 192, 192, 0.6);
+    color: white;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    position: absolute;
-    top: 1000px;
-}
-.slider{
-    display: flex;
-}
-.Item{
-    margin-left: 30px;
-    border-radius: 9px;
-    height: 360px;
-    width: 244px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    padding: 20px;
-    transition: all 0.2s ease;
-}
-.Item:hover{
-    transform: scale(1.1);
-
-}
-.Item h2{
-    color: white;
-    font-size: 16px;
-}
-.item-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.item-header p{
-    color: white;
-    font-size: 12px;
-}
-.liveDot{
-    background-color: var(--main-color);
-    border-radius: 50%;
-    height: 6px;
-    width: 6px;
-}
-.category{
-    background-color: var(--main-color);
-    border-radius: 20px;
-    padding: 5px 10px 5px 10px;
-    text-align: center;
-    width: fit-content;
-    font-size: 9px;
-    text-transform: uppercase;
-}
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.hero{
-    background: linear-gradient(rgb(0,0,0,0.6) -20%,#000000 100%),url(asset/hero.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 30%;
-    height: 1000px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-}
-header{
-    position: relative;
-    z-index: 5;
-}
-.header{
-    padding: 24px 0 19px 0;
-    margin: 0 24px;
-    display: flex;
-    align-items: center;
-}
-#bar-icon{
-    color: white;
-    font-size: 30px;
-}
-.logo{
-    height: 18px;
-    max-width: 100%;
+    border-radius: 25px;
+    height: 27px;
+    width: 53px;
 }
